<resources>
    <string name="app_name">Quiz App</string>
    <string name="app_description">This app will test your basic knowledge of Java programming Language.</string>
    <string name="start_quiz">Start</string>
    <string name="question_1">Question 1</string>
    <string name="question_2">Question 2</string>
    <string name="question_3">Question 3</string>
    <string name="question_4">Question 4</string>
    <string name="question_5">Question 5</string>
    <string name="question_6">Question 6</string>

    <string name ="question1">Which of the following statements is true?</string>
    <string name="a1" >Java is used only in NASA\'s space related applications </string>
    <string name="b1" >Java has a huge developer community</string>
    <string name="c1" >Java is used only in web and mobile applications</string>
    <string name="question2"> Which variable type would you use for a city name?</string>
    <string name="a2" >double</string>
    <string name="b2" >String</string>
    <string name="c2" >int</string>
    <string name="question3">What is the reult of the following code?
 int x=15; int y =4;
 int result = x/y;
 System.out.println(result);</string>
    <string name="a3" >3</string>
    <string name="b3" >4</string>
    <string name="c3" >5</string>
    <string name="question4">Which statement in regard to the char data type is true?</string>
    <string name="a4" >"hello" is char</string>
    <string name="b4" >\'k\' is a char </string>
    <string name="c4" >char is used to store numeric values</string>
    <string name="question5">In Java,an array starts counting from..</string>
    <string name="a5" >0</string>
    <string name="b5" >-1</string>
    <string name="c5" >3</string>
    6 How many times can you call a method?
    <string name="question6">How many times can you call a method?</string>
    <string name="a6" >one </string>
    <string name="b6" >as many as you want</string>
    <string name="c6" >only two</string>
    <string name="result">Result</string>
    <string name="review_description">Click the button below to review your quiz.</string>
    <string name="review_button">Review</string>
</resources>
