<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/Question2bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:padding="16dp"
            android:text="@string/question_2"
            android:textColor="@android:color/white"
            android:textSize="28sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/Question2bar"
            android:gravity="top|center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/Question2"
                android:layout_width="match_parent"
                android:layout_height="300px"
                android:layout_marginBottom="15dp"
                android:background="#0066FF"
                android:padding="15dp"
                android:text="@string/question2"
                android:textColor="#FFFFFF"
                android:textSize="25sp" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10px"
                android:padding="15dp">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:paddingBottom="15dp"
                    android:paddingTop="15dp"
                    android:text="@string/a2"
                    android:textColor="#777777" />

                <RadioButton
                    android:id="@+id/b2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:paddingBottom="15dp"
                    android:paddingTop="15dp"
                    android:text="@string/b2"
                    android:textColor="#777777" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:paddingBottom="15dp"
                    android:paddingTop="15dp"
                    android:text="@string/c2"
                    android:textColor="#777777" />

            </RadioGroup>

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_margin="16dp"
            android:layout_marginBottom="30dp">

            <Button
                android:id="@+id/previousButton2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:background="#0066FF"
                android:onClick="onPreviousButton2Click"
                android:padding="8dp"
                android:text="Previous"
                android:textColor="#FFFFFF"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/nextButton2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:background="#0066FF"
                android:onClick="onNextButton2Click"
                android:paddingBottom="8dp"
                android:paddingLeft="36dp"
                android:paddingRight="36dp"
                android:paddingTop="8dp"
                android:text="Next"
                android:textColor="#FFFFFF"
                android:textSize="20sp"
                android:textStyle="bold" />

        </RelativeLayout>
    </RelativeLayout>
</ScrollView>

